--- a/app/weather-widget/component/weather.component.html
+++ b/app/weather-widget/component/weather.component.html
@@ -3,7 +3,7 @@
         <div class="col-xs-8">
             <p>Leeds, UK</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-4 text-xs-right">
             <h1>3&deg;</h1>
         </div>
     </div>
