--- a/app/weather-widget/component/weather.component.html
+++ b/app/weather-widget/component/weather.component.html
@@ -4,21 +4,21 @@
             <p>Leeds, UK</p>
         </div>
         <div class="col-xs-4 text-xs-right">
-            <h1>3&deg;</h1>
+            <h1>{{ weatherData.temp }}&deg;</h1>
         </div>
     </div>
     <div class="card-block">
         <h1>0</h1>
-        <p>Rain</p>
+        <p>{{ weatherData.summary }}</p>
     </div>
     <div class="card-footer">
         <div class="col-xs-5">
             <p>Wind</p>
-            <p>14mph</p>
+            <p>{{ weatherData.wind }}MPH</p>
         </div>
         <div class="col-xs-5 offset-xs-2">
             <p>Humidity</p>
-            <p>80%</p>
+            <p>{{ weatherData.humidity }}%</p>
         </div>
     </div>
 </div>
