--- a/app/weather-widget/component/weather.component.html
+++ b/app/weather-widget/component/weather.component.html
@@ -14,7 +14,7 @@
     <div class="card-footer">
         <div class="col-xs-5">
             <p>Wind</p>
-            <p>{{ weatherData.wind }}MPH</p>
+            <p>{{ weatherData.wind | speedUnit: currentSpeedUnit }}</p>
         </div>
         <div class="col-xs-5 offset-xs-2">
             <p>Humidity</p>
