--- a/app/weather-widget/component/weather.component.css
+++ b/app/weather-widget/component/weather.component.css
@@ -8,13 +8,12 @@
 .card-footer {
     border: none;
     border-radius: 0;
-    background-color: #00bcd4;
-    color: #fff;
 }
 
 .card-header,
 .card-footer {
     padding: 1rem .5rem;
+    background-color: transparent;
 }
 
 .card-block {
