--- a/app/weather-widget/component/weather.component.html
+++ b/app/weather-widget/component/weather.component.html
@@ -8,7 +8,11 @@
         </div>
     </div>
     <div class="card-block">
-        <canvas id="icon"></canvas>
+        <div id="indicator" [hidden]="dataReceived">
+            <i class="fa fa-spinner fa-spin fa-4x fa-fw"></i>
+            <span class="sr-only">Loading...</span>
+        </div>
+        <canvas id="icon" [hidden]="!dataReceived"></canvas>
         <p>{{ weatherData.summary }}</p>
     </div>
     <div class="card-footer" [class.invisible]="!dataReceived">
