--- a/app/weather-widget/component/weather.component.css
+++ b/app/weather-widget/component/weather.component.css
@@ -1,6 +1,8 @@
 
 .card {
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .24);
+    transition: background-color .5s ease;
+    cursor: pointer;
 }
 
 .card,
@@ -13,11 +15,36 @@
 .card-header,
 .card-footer {
     padding: 1rem .5rem;
+
     background-color: transparent;
 }
 
+#location-wrapper {
+    font-size: 1.1rem;
+}
+
 .card-block {
-    padding: 3rem;
+    padding: 1.5rem 0;
+}
+
+#indicator {
+    position: relative;
+
+    height: 165px;
+}
+
+#indicator i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 50%;
+    margin: -8% 0 0 -25%;
+}
+
+canvas {
+    max-width: 250px;
+    margin-bottom: 1rem;
 }
 
 .card-block,
@@ -25,7 +52,22 @@
     text-align: center;
 }
 
+.card-footer {
+    padding-bottom: .5rem;
+}
+
+#detail-row {
+    font-size: .8rem;
+}
+
+#helper-row {
+    padding-top: .5rem;
+}
+
 p {
     margin: .2rem;
+}
+
+p:not(.unit-label) {
     text-transform: uppercase;
 }
